--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,4 +75,68 @@ body {
   line-height: 1.5;
   text-decoration: none;
   color: var(--color-text-primary);
+  border-radius: 5px;
+  padding: 15px 80px;
+}
+
+.features-title {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+/*Services Section*/
+.services {
+  background-color: var(--color-background-section);
+}
+
+.services-title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.services-text {
+  font-size: 32px;
+  text-align: center;
+}
+
+.services-name {
+  font-weight: 600;
+}
+
+.services-button {
+  font-family: var(--font-secondary);
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 0.06em;
+  line-height: 1.5;
+  border: 3px solid var(--color-button);
+  border-radius: 5px;
+  padding: 15px 80px;
+  cursor: pointer;
+}
+
+.footer {
+  background-color: var(--color-background-primary);
+}
+
+.footer-logo {
+  font-weight: 300;
+  font-size: 40px;
+  text-transform: capitalize;
+  color: var(--color-text-contrast);
+  text-decoration: none;
+}
+
+.footer-logo-part {
+  font-weight: 700;
+  color: var(--color-text-contrast);
+}
+
+.policy {
+  font-weight: 400;
+  text-transform: capitalize;
+  color: var(--color-text-contrast);
 }
