--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,8 +18,18 @@ body {
   font-weight: 400;
 }
 
+.container {
+  max-width: 1650px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 .header {
   background-color: var(--color-background-primary);
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .nav-link {
@@ -33,6 +43,11 @@ body {
 }
 
 /*Hero Section*/
+.hero-content {
+  padding-top: 150px;
+  padding-bottom: 365px;
+}
+
 .hero-title {
   font-size: 64px;
   font-weight: 400;
@@ -53,9 +68,13 @@ body {
 }
 
 /*About Section*/
-
 .about {
   background-color: var(--color-background-section);
+}
+
+.about-content {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .about-title {
   font-weight: 700;
@@ -79,6 +98,11 @@ body {
   padding: 15px 80px;
 }
 
+/*Features Section*/
+.features {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 .features-title {
   font-size: 32px;
   font-weight: 700;
@@ -88,6 +112,8 @@ body {
 /*Services Section*/
 .services {
   background-color: var(--color-background-section);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .services-title {
@@ -120,6 +146,8 @@ body {
 
 .footer {
   background-color: var(--color-background-primary);
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
 
 .footer-logo {
@@ -128,6 +156,11 @@ body {
   text-transform: capitalize;
   color: var(--color-text-contrast);
   text-decoration: none;
+}
+
+.footer-logo-image {
+  width: 80px;
+  height: 80px;
 }
 
 .footer-logo-part {
