--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -96,6 +96,7 @@ body {
   color: var(--color-text-primary);
   border-radius: 5px;
   padding: 15px 80px;
+  display: inline-block;
 }
 
 /*Features Section*/
