--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,6 +32,14 @@ body {
   padding-top: 30px;
 }
 
+/*Header*/
+
+.nav-list {
+  display: flex;
+  gap: 100px;
+  align-items: center;
+}
+
 .nav-link {
   color: var(--color-text-contrast);
   font-family: var(--font-secondary);
@@ -43,6 +51,11 @@ body {
 }
 
 /*Hero Section*/
+
+.hero-container {
+  display: flex;
+  gap: 342px;
+}
 .hero-content {
   padding-top: 150px;
   padding-bottom: 365px;
@@ -52,6 +65,8 @@ body {
   font-size: 64px;
   font-weight: 400;
   text-transform: capitalize;
+  line-height: 85px;
+  margin-bottom: 50px;
 }
 
 .hero-title-part {
@@ -65,6 +80,20 @@ body {
   background-color: var(--color-button);
   font-family: var(--font-secondary);
   cursor: pointer;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 80px;
+  padding-left: 80px;
+  border-radius: 5px;
+}
+
+.hero-button:hover {
+  transform: translateY(-5px);
+}
+
+.hero-image {
+  height: 800px;
+  width: 800px;
 }
 
 /*About Section*/
@@ -82,6 +111,10 @@ body {
   text-transform: capitalize;
 }
 
+.about-img {
+  width: 740px;
+  height: 740px;
+}
 .about-text {
   font-size: 32px;
   line-height: 1.19;
@@ -108,6 +141,11 @@ body {
   font-size: 32px;
   font-weight: 700;
   text-transform: capitalize;
+}
+
+.features-img {
+  width: 517;
+  height: 768px;
 }
 
 /*Services Section*/
