--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,6 +100,11 @@ body {
 .about {
   background-color: var(--color-background-section);
 }
+.about-container {
+  display: flex;
+  gap: 78px;
+  align-items: center;
+}
 
 .about-content {
   padding-top: 100px;
@@ -109,6 +114,7 @@ body {
   font-weight: 700;
   font-size: 40px;
   text-transform: capitalize;
+  margin-bottom: 30px;
 }
 
 .about-img {
@@ -118,8 +124,16 @@ body {
 .about-text {
   font-size: 32px;
   line-height: 1.19;
+  margin-bottom: 60px;
 }
 
+.about-text:first-of-type {
+  margin-bottom: 40px;
+}
+
+.about-text:last-child {
+  margin-bottom: 60px;
+}
 .about-link {
   letter-spacing: 0.06em;
   background-color: var(--color-button);
@@ -132,15 +146,37 @@ body {
   display: inline-block;
 }
 
+.about-link:hover {
+  transform: translateY(-5px);
+}
+
 /*Features Section*/
 .features {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
+.features-container {
+  display: flex;
+  gap: 174px;
+  align-items: center;
+}
+
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 115px;
+  row-gap: 88px;
+}
+
+.features-item {
+  max-width: 407px;
+}
 .features-title {
   font-size: 32px;
   font-weight: 700;
   text-transform: capitalize;
+  margin-bottom: 25px;
 }
 
 .features-img {
@@ -155,18 +191,36 @@ body {
   padding-bottom: 60px;
 }
 
+.services-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 56px;
+}
+
 .services-title {
   font-size: 40px;
   font-weight: 700;
   text-transform: capitalize;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .services-text {
   font-size: 32px;
   text-align: center;
+  max-width: 1345px;
 }
 
+.services-list {
+  margin-bottom: 24px;
+  display: flex;
+  gap: 20px;
+}
+
+.services-photo {
+  margin-bottom: 25px;
+}
 .services-name {
   font-weight: 600;
 }
@@ -189,17 +243,25 @@ body {
   padding-bottom: 35px;
 }
 
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .footer-logo {
   font-weight: 300;
   font-size: 40px;
   text-transform: capitalize;
   color: var(--color-text-contrast);
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .footer-logo-image {
-  width: 80px;
-  height: 80px;
+  max-width: 78px;
+  margin-right: 50px;
 }
 
 .footer-logo-part {
